force-app/main/default/objects/Survey__c/fields/Time_Spent_on_Additional_Recall_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_on_Additional_Recall_per_Day__c</fullName>
    <label>Time Spent on Additional Recall per Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes-1 hour</fullName>
            </value>
            <value>
                <fullName>1-2 hours</fullName>
            </value>
            <value>
                <fullName>2-3 hours</fullName>
            </value>
            <value>
                <fullName>More than 3 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>