force-app/main/default/objects/Survey__c/fields/Using_Limelight_Online_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Using_Limelight_Online_Scheduling__c</fullName>
    <label>Using Limelight Online Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>