force-app/main/default/objects/Survey__c/fields/Using_SR_for_Recall__c.field-meta.xml
<CustomField>
    <fullName>Using_SR_for_Recall__c</fullName>
    <label>Using SR for Recall</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>