force-app/main/default/objects/Survey__c/fields/Using_SR_for_Reviews_and_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Using_SR_for_Reviews_and_Social_Media__c</fullName>
    <label>Using SR for Reviews and Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>