force-app/main/default/objects/Survey__c/fields/Was_Issue_Resolved_to_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Was_Issue_Resolved_to_Satisfaction__c</fullName>
    <formula>VALUE(IF( Resolved_to_Satisfaction__c = &quot;None&quot;,&quot;&quot;, TRIM( RIGHT( Resolved_to_Satisfaction__c , 2) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Was your issue resolved to your satisfaction?</inlineHelpText>
    <label>Resolved to Satisfaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>