force-app/main/default/objects/Survey__c/fields/What_do_you_like_most_about_SR_Product__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_like_most_about_SR_Product__c</fullName>
    <label>What do you like most about SR Product</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>