force-app/main/default/objects/Survey__c/fields/Would_you_Recommend_SR__c.field-meta.xml
<CustomField>
    <fullName>Would_you_Recommend_SR__c</fullName>
    <formula>Value(IF( FS_Would_you_Recommend__c = &quot;None&quot;,&quot;&quot;, TRIM( RIGHT( FS_Would_you_Recommend__c , 2) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Would you recommend Solutionreach to a friend or colleague?</inlineHelpText>
    <label>Would you Recommend SR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>