force-app/main/default/objects/Survey__c/recordTypes/EBR_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>EBR_Case_Survey</fullName>
    <active>true</active>
    <label>EBR Case Survey</label>
</RecordType>