force-app/main/default/objects/Survey__c/recordTypes/Playbook_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Playbook_Case_Survey</fullName>
    <active>true</active>
    <label>Playbook Case Survey</label>
</RecordType>