force-app/main/default/objects/Survey__c/recordTypes/Post_Cancel_Survey.recordType-meta.xml
<RecordType>
    <fullName>Post_Cancel_Survey</fullName>
    <active>true</active>
    <description>Survey sent out after an office cancels their subscription</description>
    <label>Post Cancel Survey</label>
</RecordType>