force-app/main/default/objects/Survey__c/recordTypes/Post_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Post_Case_Survey</fullName>
    <active>true</active>
    <description>Surveys that are sent out after a Case is closed</description>
    <label>Post Case Survey</label>
</RecordType>