force-app/main/default/objects/Survey__c/recordTypes/Post_Sale_Survey.recordType-meta.xml
<RecordType>
    <fullName>Post_Sale_Survey</fullName>
    <active>true</active>
    <description>Survey sent out immediately after the office is sold</description>
    <label>Post Sale Survey</label>
</RecordType>