force-app/main/default/objects/Survey__c/recordTypes/SR_Impact_Survey.recordType-meta.xml
<RecordType>
    <fullName>SR_Impact_Survey</fullName>
    <active>true</active>
    <label>SR Impact Survey</label>
</RecordType>