force-app/main/default/objects/Survey__c/recordTypes/SR_NPS_Survey.recordType-meta.xml
<RecordType>
    <fullName>SR_NPS_Survey</fullName>
    <active>true</active>
    <label>SR NPS Survey</label>
</RecordType>