force-app/main/default/objects/Survey__c/listViews/NPS_Survey_All.listView-meta.xml
<ListView>
    <fullName>NPS_Survey_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FS_Would_you_Recommend__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Business_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.SR_NPS_Survey</value>
    </filters>
    <label>NPS Survey All</label>
</ListView>