force-app/main/default/objects/Survey__c/listViews/SR_Impact_Survey.listView-meta.xml
<ListView>
    <fullName>SR_Impact_Survey</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.SR_Impact_Survey</value>
    </filters>
    <label>SR Impact Surveys</label>
</ListView>