force-app/main/default/objects/Survey__c/listViews/Today_s_Surveys.listView-meta.xml
<ListView>
    <fullName>Today_s_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Survey_Completion_Date__c</columns>
    <columns>Survey_Completed__c</columns>
    <columns>How_can_we_improve__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Overall_Rep_Experience__c</columns>
    <columns>Would_you_Recommend_SR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Completion_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Post_Case_Survey</value>
    </filters>
    <label>Today&#39;s Post Case Surveys</label>
</ListView>